# wi23

./: Makefile  README.md  cabal.project  hw3-recursive.cabal  stack.yaml  wi23.cabal
sol/: Practice_Lec10.hs  Practice_Lec11.hs  Practice_Lec12.hs  Practice_Lec13.hs  Practice_Lec14.hs  Practice_Lec16_Sol.md  Practice_Lec7.hs  Practice_Lec8.hs  Practice_Lec9.hs  Practice_Lec9_sol.hs
src/: 01_fixpoint.lc  02_lists.lc  Hw3.hs  Practice_Lec10.hs  Practice_Lec11.hs  Practice_Lec12.hs  Practice_Lec13.hs  Practice_Lec14.hs  Practice_Lec15.hs  Practice_Lec16.md  Practice_Lec17.md  Practice_Lec7.hs  Practice_Lec8.hs  Practice_Lec9.hs
tests/: Common.hs  Practice_Lec10Spec.hs  Practice_Lec11Spec.hs  Practice_Lec14Spec.hs  Practice_Lec7Spec.hs  Practice_Lec8Spec.hs  Practice_Lec9Spec.hs  Spec.hs  Test.hs
