name:                wi23
version:             0.1.0.0
synopsis:            Haskell practice problems
license:             MIT
license-file:        LICENSE
author:              Michael Borkowski and Ranjit Jhala
maintainer:          mborkows@eng.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     Practice_Lec7,
                       Practice_Lec8,
                       Practice_Lec9,
                       Practice_Lec10

  -- other-extensions:
  build-depends:       array, base

  hs-source-dirs:      src
  default-language:    Haskell2010

executable wi23
  build-depends:       base
  default-language:    Haskell2010
  main-is:             Main.hs

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests     
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    wi23
